@@ -14,7 +14,7 @@ manifoldincludedir = $(pkgincludedir)/manifold
 
 noinst_LTLIBRARIES = libmanifold.la
 
-libmanifold_la_SOURCES = nhandlebody.cpp nlensspace.cpp nmanifold.cpp nsfs.cpp nsimplesurfacebundle.cpp
+libmanifold_la_SOURCES = nhandlebody.cpp nlensspace.cpp nmanifold.cpp nsfs.cpp nsimplesurfacebundle.cpp nsnappeamanifold.cpp
 
-manifoldinclude_HEADERS = nhandlebody.h nlensspace.h nmanifold.h nsfs.h nsimplesurfacebundle.h
+manifoldinclude_HEADERS = nhandlebody.h nlensspace.h nmanifold.h nsfs.h nsimplesurfacebundle.h nsnappeamanifold.h
 
